clusters/argon-prod/argon/entry/service_argon-entry.yaml
apiVersion: v1
kind: Service
metadata:
  name: argon-entry
  namespace: argon
spec:
  type: NodePort
  selector:
    app: argon-entry
  ports:
    - name: https
      port: 5002
      targetPort: 5002
      protocol: TCP
      nodePort: 30001
    - name: quic
      port: 5002
      targetPort: 5002
      protocol: UDP
      nodePort: 30001
